--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>Select N Share</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="css/icon.css">
     <link rel="stylesheet" type="text/css" href="css/public.css">
 
@@ -14,16 +16,48 @@
     <script language="javascript" type="text/javascript" src="js/public.js"></script>
   </head>
 
-  <body>
+  <body class='bg_color'>
 
     <div class='i_bg'>
+      <div class='i_box_r'>
+        <div class='i_cent_type'>
+          <div class='ir_boxs'>
+            <img class='order_left' src="img/W_logo.png">
+            <a href="" class='btn_login order_right'>LOG IN</a>
+          </div>
+
+          <div class='ir_boxs'>
+            <h2>Welcome to</h2>
+            <h1>Select N Share™</h1>
+            <h3> the original instant networking™ app</h3>
+          </div>
+
+          <div class='ir_boxs magTop45'>
+            <a href="#" class='btn_blueLine magRight20'>JOIN NEW NETWORK</a>
+            <a href="#" class='btn_brightBlue'>CREATE CUSTOM QR LINK</a>
+          </div>
+        </div>
+      </div>
+      
       <div class='i_box_l'>
-        <div class='i_cent_img'></div>
+        <div class='i_cent_img'>
+          <img src="img/kv.png">
+        </div>
       </div>
 
-      <div class='i_box_r'>
-        <div class='i_cent_type'></div>
-      </div>
+      
+
+      <footer class='i_footer'>
+        <div class='i_footer_boxs'>
+          <div class='i_footer_box'>© 2020 Select N Share™</div>
+          <div class='i_footer_box'>
+            <a href="#" class='i_link'>Contact Us</a>
+            <a href="#" class='i_link'>Privacy</a>
+            <a href="#" class='i_link'>Terms of Service</a>
+          </div>
+        </div>
+      </footer>
     </div>
+
   </body>
 </html>
