--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/icon.css">
     <link rel="stylesheet" type="text/css" href="css/public.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 
     <script language="javascript" type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/public.js"></script>
@@ -23,7 +24,7 @@
         <div class='i_cent_type'>
           <div class='ir_boxs'>
             <img class='order_left' src="img/W_logo.png">
-            <a href="" class='btn_login order_right'>LOG IN</a>
+            <a href="login.html" class='btn_login order_right'>LOG IN</a>
           </div>
 
           <div class='ir_boxs'>
@@ -33,12 +34,12 @@
           </div>
 
           <div class='ir_boxs magTop45'>
-            <a href="#" class='btn_blueLine magRight20'>JOIN NEW NETWORK</a>
+            <a href="NetWorkPage.html" class='btn_blueLine magRight20'>JOIN NEW NETWORK</a>
             <a href="#" class='btn_brightBlue'>CREATE CUSTOM QR LINK</a>
           </div>
         </div>
       </div>
-      
+
       <div class='i_box_l'>
         <div class='i_cent_img'>
           <img src="img/kv.png">
