內頁快完成

--- a/NetWorkPage.html
+++ b/NetWorkPage.html
@@ -26,13 +26,153 @@
             <a href="#" class='web_menu'>JOIN an NETWORK</a>
             <a href="#" class='web_menu'>CREATE QR LINK</a>
             <a href="#" class='web_menu menu_gray'>MENU</a>
-            <a href="login.html" class='btn_login order_right'>LOG IN</a>
+            <a href="login.html" class='link_login order_right'>LOG IN</a>
           </nav>
         </header>
 
         <main>
           <div class='cent_boxs cent_mobile'></div> <!-- 手機才會顯示 -->
-          <div class='cent_boxs'></div>
+
+          <div class='cent_boxs'>
+            <div class='cent_box cent_box35'>
+              <div class='toEnter borderGray'>eXgz10F</div>  <!-- 此區域不可改，故不用input -->
+
+              <div class='all_box'>
+                <div class='team_pic_box'><img src="img/team.png"></div>
+                <div class='team_type_box'>
+                  <a class='team_title'>Intern Team</a>
+                  <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
+                </div>
+              </div>
+            </div>
+
+            <div class='cent_box cent_box65 borderGray_left'>
+              <input class='toEnter borderBlue' type="text" value="Lucy Redder">
+              <p class='bright_type13 padTB15'>Enter the info you want to share:</p>
+
+              <div class='all_box'>
+                <!-- 01.email-->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-email'></div>
+                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <div class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                </div>
+
+                <!-- 02.Instagram -->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-instagram'></div>
+                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <div class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                </div>
+
+                <!-- 03.Snapchat -->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-snapchat'></div>
+                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <div class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                </div>
+
+                <!-- 04.Facebook -->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-facebook'></div>
+                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <div class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                </div>
+
+                <!-- 05.Phone -->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-phone'></div>
+                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <div class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                </div>
+
+                <!-- 06.Linkedin -->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-linkedin'></div>
+                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                </div>
+
+                <!-- 07.Twitter -->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-twitter'></div>
+                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                </div>
+
+                <!-- 08.YouTube -->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-youtube'></div>
+                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                </div>
+
+                <!-- 09.Tiktok -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-tiktok'></div>
+                  <input class='inEnter addEnter' type="text" value="Tiktok" onfocus="this.value=''" onblur="this.value='Tiktok'" >
+                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
+                </div>
+
+                <!-- 10.Discord -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-discord'></div>
+                  <input class='inEnter addEnter' type="text"  value="discord" onfocus="this.value=''" onblur="this.value='discord'">
+                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
+                </div>
+
+                <!-- 11.Slack -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-slack'></div>
+                  <input class='inEnter addEnter' type="text"  value="Slack" onfocus="this.value=''" onblur="this.value='Slack'">
+                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
+                </div>
+
+                <!-- 12.Skype -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-skype'></div>
+                  <input class='inEnter addEnter' type="text"  value="Skype" onfocus="this.value=''" onblur="this.value='Skype'">
+                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
+                </div>
+
+                <!-- 13.Reddit -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-reddit'></div>
+                  <input class='inEnter addEnter' type="text"  value="Reddit" onfocus="this.value=''" onblur="this.value='Reddit'">
+                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
+                </div>
+
+                <!-- 14.GroupMe -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-groupme'></div>
+                  <input class='inEnter addEnter' type="text"  value="GroupMe" onfocus="this.value=''" onblur="this.value='GroupMe'">
+                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
+                </div>
+
+                <!-- 15.WhatsApp -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-whatsapp'></div>
+                  <input class='inEnter addEnter' type="text"  value="WhatsApp" onfocus="this.value=''" onblur="this.value='WhatsApp'">
+                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
+                </div>
+
+                <!-- 16.Line -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-line'></div>
+                  <input class='inEnter addEnter' type="text"  value="Line" onfocus="this.value=''" onblur="this.value='Line'">
+                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
+                </div>
+
+                <!-- 17.Other (personal website) -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-www'></div>
+                  <input class='inEnter addEnter' type="text"  value="Other (personal website)" onfocus="this.value=''" onblur="this.value='Other (personal website)'">
+                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
+                </div>
+
+              </div>
+            </div>
+          </div>
         </main>
 
         <footer>
