--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class='i_cent_type'>
           <div class='ir_boxs'>
             <img class='order_left' src="img/W_logo.png">
-            <a href="login.html" class='btn_login order_right'>LOG IN</a>
+            <a href="login.html" class='link_login order_right'>LOG IN</a>
           </div>
 
           <div class='ir_boxs'>
@@ -34,8 +34,8 @@
           </div>
 
           <div class='ir_boxs magTop45'>
-            <a href="NetWorkPage.html" class='btn_blueLine magRight20'>JOIN NEW NETWORK</a>
-            <a href="#" class='btn_brightBlue'>CREATE CUSTOM QR LINK</a>
+            <a href="NetWorkPage.html" class='link_blueLine magRight20'>JOIN NEW NETWORK</a>
+            <a href="#" class='link_brightBlue'>CREATE CUSTOM QR LINK</a>
           </div>
         </div>
       </div>
