--- a/NetWorkPage02.html
+++ b/NetWorkPage02.html
@@ -11,6 +11,9 @@
 
     <link rel="stylesheet" type="text/css" href="css/icon.css">
     <link rel="stylesheet" type="text/css" href="css/public.css">
+    <link rel="stylesheet" type="text/css" href="css/block.css">
+    <link rel="stylesheet" type="text/css" href="css/type.css">
+    <link rel="stylesheet" type="text/css" href="css/link.css">
 
     <script language="javascript" type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/public.js"></script>
@@ -23,153 +26,155 @@
         <header>
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
           <nav>
-            <a href="#" class='web_menu'>JOIN an NETWORK</a>
-            <a href="#" class='web_menu'>CREATE QR LINK</a>
-            <a href="#" class='web_menu menu_gray'>MENU</a>
+            <a href="NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
+            <a href="CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
+            <a class='web_menu menu_gray'>MENU</a>
             <a href="login.html" class='link_login order_right'>LOG IN</a>
           </nav>
+
+          <div class='m_Hamburg icon-menu'>
+          </div>
         </header>
 
         <main>
-          <div class='cent_boxs cent_mobile'></div> <!-- 手機才會顯示 -->
+          <!-- 手機才會顯示 -->
+          <div class='cent_boxs cent_mobile'>
+            <div class='cent_box'>
+              <a href="login.html" class='m_title_type type_uppercase'>log in</a>
+              <a href="CreatQRLink01.html" class='m_top_type order_right'>Create QR Link</a>
+            </div>
+          </div>
+          <!-- 手機才會顯示・end -->
 
           <div class='cent_boxs'>
             <div class='cent_box cent_box35'>
-              <div class='toEnter borderGray'>eXgz10F</div>  <!-- 此區域不可改，故不用input -->
+              <div class='toEnter borderGray'>eXgz10F</div>  <!-- 此區域資訊不可改，故不用input -->
 
-              <div class='all_box'>
+              <div class='all_box m_magTOP30'>
                 <div class='team_pic_box'><img src="img/team.png"></div>
                 <div class='team_type_box'>
-                  <a class='team_title'>Intern Team</a>
+                  <div class='all_box'>
+                    <a class='team_title'>Intern Team</a>
+                  </div>
                   <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
                 </div>
               </div>
             </div>
 
+            <i class='m_border'></i><!-- 手機版・虛線 -->
+
             <div class='cent_box cent_box65 borderGray_left'>
-              <input class='toEnter borderBlue' type="text" value="Lucy Redder">
-              <p class='bright_type13 padTB15'>Enter the info you want to share:</p>
+              <div class='input_box'>
+                <input class='toEnter addEnter borderGray' value="Full Name*" onfocus="this.value=''" onblur="this.value='Full Name*'" >
+              </div>
 
               <div class='all_box'>
                 <!-- 01.email-->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-email'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <div class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                  <input class='inEnter addEnter' type="text" value="E-mail*" onfocus="this.value=''" onblur="this.value='E-mail*'" >
                 </div>
 
                 <!-- 02.Instagram -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-instagram'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <div class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                  <input class='inEnter addEnter' type="text" value="Instagram" onfocus="this.value=''" onblur="this.value='Instagram'" >
                 </div>
 
                 <!-- 03.Snapchat -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-snapchat'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <div class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                  <input class='inEnter addEnter' type="text" value="Snapchat" onfocus="this.value=''" onblur="this.value='Snapchat'" >
                 </div>
 
                 <!-- 04.Facebook -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-facebook'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <div class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                  <input class='inEnter addEnter' type="text" value="Facebook" onfocus="this.value=''" onblur="this.value='Facebook'" >
                 </div>
 
                 <!-- 05.Phone -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-phone'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <div class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                  <input class='inEnter addEnter' type="text" value="Phone" onfocus="this.value=''" onblur="this.value='Phone'" >
                 </div>
 
                 <!-- 06.Linkedin -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-linkedin'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                  <input class='inEnter addEnter' type="text" value="Linkedin" onfocus="this.value=''" onblur="this.value='Linkedin'" >
                 </div>
 
                 <!-- 07.Twitter -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-twitter'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                  <input class='inEnter addEnter' type="text" value="Twitter" onfocus="this.value=''" onblur="this.value='Twitter'" >
                 </div>
 
                 <!-- 08.YouTube -->
-                <div class='input_box borderBlue'>
+                <div class='input_box borderGray'>
                   <div class='social_box icon-youtube'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div>
+                  <input class='inEnter addEnter' type="text" value="YouTube" onfocus="this.value=''" onblur="this.value='YouTube'" >
                 </div>
 
                 <!-- 09.Tiktok -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-tiktok'></div>
                   <input class='inEnter addEnter' type="text" value="Tiktok" onfocus="this.value=''" onblur="this.value='Tiktok'" >
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
                 </div>
 
                 <!-- 10.Discord -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-discord'></div>
                   <input class='inEnter addEnter' type="text"  value="discord" onfocus="this.value=''" onblur="this.value='discord'">
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
                 </div>
 
                 <!-- 11.Slack -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-slack'></div>
                   <input class='inEnter addEnter' type="text"  value="Slack" onfocus="this.value=''" onblur="this.value='Slack'">
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
                 </div>
 
                 <!-- 12.Skype -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-skype'></div>
                   <input class='inEnter addEnter' type="text"  value="Skype" onfocus="this.value=''" onblur="this.value='Skype'">
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
                 </div>
 
                 <!-- 13.Reddit -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-reddit'></div>
                   <input class='inEnter addEnter' type="text"  value="Reddit" onfocus="this.value=''" onblur="this.value='Reddit'">
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
                 </div>
 
                 <!-- 14.GroupMe -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-groupme'></div>
                   <input class='inEnter addEnter' type="text"  value="GroupMe" onfocus="this.value=''" onblur="this.value='GroupMe'">
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
                 </div>
 
                 <!-- 15.WhatsApp -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-whatsapp'></div>
                   <input class='inEnter addEnter' type="text"  value="WhatsApp" onfocus="this.value=''" onblur="this.value='WhatsApp'">
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
                 </div>
 
                 <!-- 16.Line -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-line'></div>
                   <input class='inEnter addEnter' type="text"  value="Line" onfocus="this.value=''" onblur="this.value='Line'">
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
                 </div>
 
                 <!-- 17.Other (personal website) -->
                 <div class='input_box borderGray'>
                   <div class='social_box icon-www'></div>
                   <input class='inEnter addEnter' type="text"  value="Other (personal website)" onfocus="this.value=''" onblur="this.value='Other (personal website)'">
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></div> -->
                 </div>
+              </div>
 
+              <div class='all_box btn_cent m_cent'>
+                <!-- <button class='btn_add icon-plus'></button> -->
+                <a href="NetWorkPage03.html" class='link_gray have_mark order_right m_order_no'>JOIN NETWORK</a>
               </div>
             </div>
           </div>
@@ -186,5 +191,29 @@
       </div>
     </div>
 
+    <!-- 手機menu -->
+    <div class='menu_boxs'>
+      <div class='all_box m_magTD30 m_padSID20'>
+        <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
+        <a class='icon-x'></a>
+      </div>
+
+      <a href='NetWorkPage01.html' class='lastMenu type_uppercase'>Join Network</a>
+      <a href='CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
+      <a class='lastMenu type_uppercase no_acc'>My Networks</a>
+      <a class='lastMenu type_uppercase no_acc'>Create Network</a>
+      <a class='lastMenu type_uppercase no_acc'>My QR Links</a>
+      <a class='lastMenu type_uppercase no_acc'>My Account</a>
+
+      <div class='all_box m_magTD30 m_padSID20'>
+        <a href="login.html" class='link_brightBlue no_mark type_uppercase '>log in</a>
+      </div>
+
+      <div class='all_box'>
+        <p class='team_type'>or <a href="signup.html" class='link_CreatAcc'>create an account</a></p>
+      </div>
+    </div>
   </body>
 </html>
+
+
