--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
     <link rel="stylesheet" type="text/css" href="css/icon.css">
     <link rel="stylesheet" type="text/css" href="css/public.css">
+    <link rel="stylesheet" type="text/css" href="css/block.css">
+    <link rel="stylesheet" type="text/css" href="css/type.css">
+    <link rel="stylesheet" type="text/css" href="css/link.css">
+
+    <!-- 首頁的css -->
     <link rel="stylesheet" type="text/css" href="css/index.css">
 
     <script language="javascript" type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
@@ -34,8 +39,8 @@
           </div>
 
           <div class='ir_boxs magTop45'>
-            <a href="NetWorkPage.html" class='link_blueLine magRight20'>JOIN NEW NETWORK</a>
-            <a href="#" class='link_brightBlue'>CREATE CUSTOM QR LINK</a>
+            <a href="NetWorkPage01.html" class='link_blueLine have_mark magRight20'>JOIN NEW NETWORK</a>
+            <a href="CreatQRLink01.html" class='link_brightBlue have_mark'>CREATE CUSTOM QR LINK</a>
           </div>
         </div>
       </div>
