--- a/NetWorkPage01.html
+++ b/NetWorkPage01.html
@@ -165,7 +165,7 @@
 
               <div class='all_box btn_cent m_cent'>
                 <!-- <button class='btn_add icon-plus'></button> -->
-                <a href="NetWorkPage02.html" class='link_gray have_mark order_right m_order_no'>JOIN NETWORK</a>
+                <a href="NetWorkPage02.html" class='link_gray have_mark order_right m_order_no m_magTop45'>JOIN NETWORK</a>
               </div>
             </div>
           </div>
