--- a/NetWorkPage02.html
+++ b/NetWorkPage02.html
@@ -54,7 +54,7 @@
                 <div class='team_pic_box'><img src="img/team.png"></div>
                 <div class='team_type_box'>
                   <div class='all_box'>
-                    <a class='team_title'>Intern Team</a>
+                    <div class='team_title'>Intern Team</div>
                   </div>
                   <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
                 </div>
@@ -174,7 +174,7 @@
 
               <div class='all_box btn_cent m_cent'>
                 <!-- <button class='btn_add icon-plus'></button> -->
-                <a href="NetWorkPage03.html" class='link_gray have_mark order_right m_order_no'>JOIN NETWORK</a>
+                <a href="NetWorkPage03.html" class='link_gray have_mark order_right m_order_no m_magTop45'>JOIN NETWORK</a>
               </div>
             </div>
           </div>
