--- a/NetWorkPage06.html
+++ b/NetWorkPage06.html
@@ -48,149 +48,80 @@
 
           <div class='cent_boxs'>
             <div class='cent_box cent_box35'>
-              <div class='toEnter borderGray'>eXgz10F</div>  <!-- 此區域資訊不可改，故不用input -->
-
-              <div class='all_box m_magTOP30'>
+              <div class='all_box'>
                 <div class='team_pic_box'><img src="img/team.png"></div>
                 <div class='team_type_box'>
                   <div class='all_box'>
-                    <div class='team_title'>Intern Team</div>
+                    <a class='team_title no_event'>Intern Team</a>
+                    <a class='link_icon no_event_icon icon-qrcode---FontAwesome'></a>
                   </div>
-                  <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
+                  <p class='team_type no_event'>Welcome to the new team! Let's get to know each other!</p>
                 </div>
-              </div>
+              </div>              
             </div>
 
             <i class='m_border'></i><!-- 手機版・虛線 -->
 
             <div class='cent_box cent_box65 borderGray_left'>
-              <input class='toEnter borderBlue' type="text" value="Lucy Redder">
-              <p class='bright_type13 padTB15'>Enter the info you want to share:</p>
+              <div class='input_box'>
+                <a href='NetWorkPage05.html' class='btn_done'>Done</a>
+                <!-- <button class='btn_done'>Done</button> -->
+              </div>
+
+              <div class='input_box'>
+                <input class='toEnter borderBlue' type="text" value="Lucy Redder">
+              </div>
 
               <div class='all_box'>
                 <!-- 01.email-->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-email'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <div class='inEnter' type="text">abcdef568328@gmail.com</div>
                   <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
 
                 <!-- 02.Instagram -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-instagram'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <input class='inEnter' type="text" value="LucyRedde">
                   <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
 
                 <!-- 03.Snapchat -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-snapchat'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <input class='inEnter' type="text" value="lucyredde23">
                   <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
 
                 <!-- 04.Facebook -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-facebook'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <input class='inEnter' type="text" value="lr123">
                   <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
 
                 <!-- 05.Phone -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-phone'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
+                  <input class='inEnter' type="text" value="0912345678">
                   <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
 
-                <!-- 06.Linkedin -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-linkedin'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
-                </div>
+                <div class='all_box btn_cent m_cent'>
+                  <button class='btn_add icon-plus' onclick="openModal();currentSlide(1)"></button>
 
-                <!-- 07.Twitter -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-twitter'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                  <!-- 桌機版型 -->
+                  <div class='box70 m_not_show'>
+                    <a href="signup.html" class='link_brightBlue order_right m_order_no'>CREATE an ACCOUNT</a>
+                    <p class='note_type lineHeight45 order_right'>Join now to access this information later!</p>
+                  </div>
+                  <!-- 手機版型 -->
+                  <div class='all_box m_magTop45 w_not_show'>
+                    <p class='note_type lineHeight45'>Join now to access this information later!</p>
+                    <a href="signup.html" class='link_brightBlue order_right m_order_no'>CREATE an ACCOUNT</a>
+                  </div>
                 </div>
-
-                <!-- 08.YouTube -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-youtube'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
-                </div>
-
-                <!-- 09.Tiktok -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-tiktok'></div>
-                  <input class='inEnter addEnter' type="text" value="Tiktok" onfocus="this.value=''" onblur="this.value='Tiktok'" >
-                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 10.Discord -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-discord'></div>
-                  <input class='inEnter addEnter' type="text"  value="discord" onfocus="this.value=''" onblur="this.value='discord'">
-                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 11.Slack -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-slack'></div>
-                  <input class='inEnter addEnter' type="text"  value="Slack" onfocus="this.value=''" onblur="this.value='Slack'">
-                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 12.Skype -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-skype'></div>
-                  <input class='inEnter addEnter' type="text"  value="Skype" onfocus="this.value=''" onblur="this.value='Skype'">
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 13.Reddit -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-reddit'></div>
-                  <input class='inEnter addEnter' type="text"  value="Reddit" onfocus="this.value=''" onblur="this.value='Reddit'">
-                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 14.GroupMe -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-groupme'></div>
-                  <input class='inEnter addEnter' type="text"  value="GroupMe" onfocus="this.value=''" onblur="this.value='GroupMe'">
-                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 15.WhatsApp -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-whatsapp'></div>
-                  <input class='inEnter addEnter' type="text"  value="WhatsApp" onfocus="this.value=''" onblur="this.value='WhatsApp'">
-                  <!-- <div class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 16.Line -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-line'></div>
-                  <input class='inEnter addEnter' type="text"  value="Line" onfocus="this.value=''" onblur="this.value='Line'">
-                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-
-                <!-- 17.Other (personal website) -->
-                <div class='input_box borderGray'>
-                  <div class='social_box icon-www'></div>
-                  <input class='inEnter addEnter' type="text"  value="Other (personal website)" onfocus="this.value=''" onblur="this.value='Other (personal website)'">
-                  <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
-                </div>
-              </div>
-
-              <div class='all_box btn_cent m_cent'>
-                <button class='btn_add icon-plus' onclick="openModal();currentSlide(1)"></button>
-                <a href="NetWorkPage04.html" class='link_brightBlue have_mark order_right m_order_no m_magTop45'>JOIN NETWORK</a>
               </div>
             </div>
           </div>
@@ -235,6 +166,7 @@
       </div>
     </div>
 
+
     <!-- 手機menu -->
     <div class='menu_boxs'>
       <div class='all_box m_magTD30 m_padSID20'>
@@ -268,7 +200,6 @@
         document.getElementById("myModal").style.display = "none";
       }
     </script>
-
   </body>
 </html>
 
