--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
           <div class='ir_boxs magTop45'>
             <a href="NetWorkPage01.html" class='link_blueLine have_mark magRight20'>JOIN NEW NETWORK</a>
-            <a href="CreatQRLink01.html" class='link_brightBlue have_mark'>CREATE CUSTOM QR LINK</a>
+            <a href="CreatQRLink01.html" class='link_brightBlue have_mark m_magTop15'>CREATE CUSTOM QR LINK</a>
           </div>
         </div>
       </div>
